test.sh